--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "typescript": "^3.9.6"
   },
   "devDependencies": {
+    "@types/react-helmet": "^6.0.0",
     "@types/styled-components": "^5.1.0",
     "prettier": "2.0.5"
   },
