--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "react-dom": "^16.12.0",
     "react-helmet": "^6.1.0",
     "styled-components": "^5.1.1",
+    "typeface-archivo": "^1.1.3",
     "typeface-muli": "^1.1.3",
+    "typeface-teko": "^0.0.72",
     "typescript": "^3.9.6"
   },
   "devDependencies": {
