--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-feather": "^2.0.8",
     "react-helmet": "^6.1.0",
     "styled-components": "^5.1.1",
     "typeface-archivo": "^1.1.3",
