updated landing page self presentation design

--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-helmet": "^6.1.0",
     "styled-components": "^5.1.1",
     "typeface-muli": "^1.1.3",
+    "typeface-roboto": "^0.0.75",
     "typeface-teko": "^0.0.72",
     "typescript": "^3.9.6"
   },
