--- a/tsconfig.json
+++ b/tsconfig.json
@@ -47,6 +47,7 @@
       "@theme/*": ["theme/*"],
       "@sections/*": ["sections/*"],
       "@images/*": ["images/*"],
+      "@config/*": ["config/*"],
     } /* A series of entries which re-map imports to lookup locations relative to the 'baseUrl'. */,
     // "rootDirs": [],                        /* List of root folders whose combined content represents the structure of the project at runtime. */
     "typeRoots": [
