--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-dom": "^16.12.0",
     "react-feather": "^2.0.8",
     "react-helmet": "^6.1.0",
+    "scrollreveal": "^4.0.6",
     "smooth-scroll": "^16.1.3",
     "styled-components": "^5.1.1",
     "typeface-muli": "^1.1.3",
