--- a/tsconfig.json
+++ b/tsconfig.json
@@ -48,6 +48,7 @@
       "@sections/*": ["sections/*"],
       "@images/*": ["images/*"],
       "@config/*": ["config/*"],
+      "@utils/*": ["utils/*"],
     } /* A series of entries which re-map imports to lookup locations relative to the 'baseUrl'. */,
     // "rootDirs": [],                        /* List of root folders whose combined content represents the structure of the project at runtime. */
     "typeRoots": [
