--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -4,9 +4,7 @@ name: Github Pages
 # events but only for the master branch
 on:
   push:
-    branches: [ master ]
-  pull_request:
-    branches: [ master ]
+    branches: [ master ]git 
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
