--- a/tsconfig.json
+++ b/tsconfig.json
@@ -74,5 +74,5 @@
     /* Advanced Options */
     "forceConsistentCasingInFileNames": true /* Disallow inconsistently-cased references to the same file. */
   },
-  "include": ["src/**/*"]
+  "include": ["src/**/*", "src/resume.pdf"]
 }
