--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "gatsby-plugin-scroll-reveal": "^0.0.7",
     "gatsby-plugin-sharp": "^2.6.14",
     "gatsby-plugin-styled-components": "^3.3.9",
+    "gatsby-remark-attr": "^0.1.0",
     "gatsby-remark-external-links": "^0.0.4",
     "gatsby-remark-images": "^3.3.18",
     "gatsby-source-filesystem": "^2.3.14",
