removed extra link

--- a/content/resume/extras/sample/index.md.sample
+++ b/content/resume/extras/sample/index.md.sample
@@ -1,8 +1,9 @@
 ---
-endDate: "2017-6"
-title: "Institution"
-titleExtension: "Degree"
-subTitle: "2015 - 2017"
-location: "Sierre, CH"
+endDate: '2019-11'
+title: "event"
+titleExtension: "position"
+subTitle: "Other information"
+location: ""
 ---
 
+Description
