added font script, updated module declaration file

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -49,6 +49,7 @@
       "@images/*": ["images/*"],
       "@config/*": ["config/*"],
       "@utils/*": ["utils/*"],
+      "@fonts/*": ["fonts/*"],
     } /* A series of entries which re-map imports to lookup locations relative to the 'baseUrl'. */,
     // "rootDirs": [],                        /* List of root folders whose combined content represents the structure of the project at runtime. */
     "typeRoots": [
