--- a/package.json
+++ b/package.json
@@ -4,10 +4,13 @@
   "version": "1.0.1",
   "author": "Robert Lee Seligmann <robert.seligmann@protonmail.ch>",
   "dependencies": {
+    "@mdx-js/mdx": "^1.6.19",
+    "@mdx-js/react": "^1.6.19",
     "babel-plugin-styled-components": "^1.10.7",
     "gatsby": "^2.23.12",
     "gatsby-image": "^2.4.9",
     "gatsby-plugin-manifest": "^2.4.14",
+    "gatsby-plugin-mdx": "^1.2.51",
     "gatsby-plugin-offline": "^3.2.13",
     "gatsby-plugin-react-helmet": "^3.3.6",
     "gatsby-plugin-scroll-reveal": "^0.0.7",
@@ -17,7 +20,6 @@
     "gatsby-remark-external-links": "^0.0.4",
     "gatsby-remark-images": "^3.3.18",
     "gatsby-source-filesystem": "^2.3.14",
-    "gatsby-transformer-remark": "^2.8.25",
     "gatsby-transformer-sharp": "^2.5.7",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
@@ -51,6 +53,6 @@
     "url": "https://github.com/gatsbyjs/gatsby-starter-default"
   },
   "bugs": {
-    "url": "https://github.com/gatsbyjs/gatsby/issues"
+  "url": "https://github.com/gatsbyjs/gatsby/issues"
   }
 }
