--- a/tsconfig.json
+++ b/tsconfig.json
@@ -50,6 +50,7 @@
       "@config/*": ["config/*"],
       "@utils/*": ["utils/*"],
       "@fonts/*": ["fonts/*"],
+      "@hooks/*": ["hooks/*"],
     } /* A series of entries which re-map imports to lookup locations relative to the 'baseUrl'. */,
     // "rootDirs": [],                        /* List of root folders whose combined content represents the structure of the project at runtime. */
     "typeRoots": [
